# llmq

./: CMakeLists.txt  LICENSE  README.md  build_amd.sh  demo.py  doc.md  export-checkpoint.cpp  pyproject.toml  tokenize_data.py  train.cpp
.github/scripts/: add_cuda_deps.py
.github/workflows/: build.yml  wheel.yml
benchmarks/: 4090x1.md  4090x4.md  5060Ti.md  H100x1.md  H100x8.md  Pro6000x1.md  Pro6000x4.md  Pro6000x8.md
benchmarks/1x4090/: README.md  qwen-0.5b.yaml  qwen-1.5b.yaml  qwen-14b.yaml  qwen-3b.yaml  qwen-7b.yaml
benchmarks/4x4090/: ds_z2_offload.json  ds_z3_offload.json  qwen-0.5b.yaml  qwen-1.5b.yaml  qwen-14b.yaml  qwen-32b.yaml  qwen-3b.yaml  qwen-7b.yaml
cmake/: cuda.cmake  hip.cmake
python/: export-wandb.py  export_wandb.py  plot-training-run.py
scripts/: demo.py  export_wandb.py  modal_test_app.py  modal_test_ci.py  modal_tests.py  plot_training_run.py  test_kernels.py  tokenize_data.py  train.py  watch_wandb.py
src/binding/: binding.cpp  binding_utils.cpp  binding_utils.h  kernel_binding.cpp  py_train.cpp  py_train.h
src/binding/python/: __init__.py  kernels.py  training.py  wandb_log.py
src/binding/python/tests/: recompute.py  run.py  torch_reference.py
src/kernels/: adamw.cu  attention.cu  bias.cu  convert.cu  cudnn_att.cpp  encoder.cu  fill.cu  fused_classifier.cu  fused_classifier_tma.cu  gemm_mma.cu  global_norm.cu  kernel_utils.cuh  kernels.cpp  kernels.h  matmul.cpp  matmul.cu  qk_norm.cu  quant.cu  random.cu  rmsnorm.cu  rope.cu  squirrel_noise.cuh  swiglu.cu  tensor_core_utils.cuh  tensor_core_utils.h  transpose.cu  transpose_template.cuh  vector_add.cu
src/models/: llama_config.cpp  llama_config.h  llama_gradients.cpp  llama_gradients.h  llama_model.cpp  llama_model.h  llama_optimizer.cpp  llama_optimizer.h  llama_run_state.cpp  llama_run_state.h  llama_weights.cpp  llama_weights.h
src/testing/: recompute.cpp  test-classifier.cu  test-gemm.cpp  test-rmsnorm-backward.cu  test-rope.cu  test-swiglu.cu  test_config.h  test_main.cpp  test_utils.h
src/testing/kernels/: gemm.cpp
src/training/: adamw_optimizer.cpp  adamw_optimizer.h  checkpoint.cpp  checkpoint.h  dataloader.cpp  dataloader.h  gradients.cpp  gradients.h  logging.cpp  logging.h  model.cpp  model.h  schedule.h  transformer_config.cpp  transformer_config.h
src/utilities/: allocator.cpp  allocator.h  amd.h  comm.cpp  comm.h  cu_file.cpp  cu_file.cu  cu_file.h  cu_file_fallback.cpp  dtype.cpp  dtype.h  gpu_info.h  gpu_info_fallback.cpp  gpu_info_nvml.cpp  lazy_allocator.cpp  lazy_allocator.h  nvml.cpp  nvml.h  philox.h  safetensors.cpp  safetensors.h  sol.cpp  sol.h  stack.cpp  stack.h  strided_iter.cuh  tensor.cpp  tensor.h  tensor_container.h  utils.cpp  utils.h  vec.cuh
