[project]
name = "pyllmq"
version = "0.2.3"
description = "Python wrappers for LLMQ. LLM pretraining written in CUDA."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Erik Schultheis", email = "erik.schultheis@ist.ac.at" }
]
maintainers = [
    { name = "Erik Schultheis", email = "erik.schultheis@ist.ac.at" }
]
keywords = ["machine learning", "large language model"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",

    "Operating System :: POSIX :: Linux",

    "Programming Language :: C++",
    "Programming Language :: Python :: 3",

    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy>=2.3.2",
    "tqdm>=4.67.1",
]
[project.optional-dependencies]
scripts = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "matplotlib>=3.10.5",
    "plotly[express]>=6.3.0",
    "pyqt6>=6.9.1",
    "wandb>=0.21.1",
    "lm-eval>=0.4.9",
    "pandas>=2.3.1",
    "plotly[express]>=6.3.0",
]

[project.urls]
Repository = "https://github.com/IST-DASLab/llmq"
Issues = "https://github.com/IST-DASLab/llmq/issues"

[project.scripts]
pyllmq-demo = "pyllmq.scripts.demo:main"
pyllmq-tokenize = "pyllmq.scripts.tokenize_data:main"
pyllmq-wandb = "pyllmq.scripts.export_wandb:main"
pyllmq-plot = "pyllmq.scripts.plot_training_run:main"
pyllmq-train = "pyllmq.scripts.train:main"

[build-system]
requires = ["scikit-build-core>=0.11", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.py-api = "cp312"
build.targets = ["_pyllmq"]
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
PYTHON_BINDING = "ON"
USE_MPI = "OFF"
USE_CUFILE = "OFF"
CMAKE_CUDA_ARCHITECTURES = {env="CUDAARCHS"}

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.{h,c,hpp,cpp,cu,cuh,py}" },
    { file = "CMakeLists.txt" }
]

[dependency-groups]
dev = [
    "auditwheel>=6.5.0",
    "patchelf>=0.17.2.4",
    "twine>=6.2.0",
]
